# openCV_cpp

./: README.md  pikselYogunlugu.cpp
pikselYogunlugu/: pikselYogunlugu.cpp
projeler-linux-x86_64/: README.md
projeler-linux-x86_64/goruntudenMetinCekme/: CMakeLists.txt  main.cpp
projeler-linux-x86_64/pikselYogunlugu_linux_x86_64/: CMakeLists.txt  README.md
sadece_kaynak_kod/temel/: pikselYogunlugu.cpp
sadece_kaynak_kod/temel/dikdortgende_Line_Tespit/: lineTespiti.cpp
sadece_kaynak_kod/temel/trackbar_fotograf_bgr_arttirma/: guiPikselArttirma.cpp
temel/: pikselYogunlugu.cpp  rngCevreleme.cpp
temel/kontur_cevreleme_NesneSayma/: nesneSayma.cpp
temel/para_Uzerinde_Cember_Tespit/: cemberTespiti.cpp
temel/trackbar_fotograf_bgr_arttirma/: guiPikselArttirma.cpp
